Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7388

JNI THROW_IF_ERROR macros use local scope variables which likely conflict

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 3.1.0
    • None
    • None
    • ghx-label-9

    Description

      The THROW_IF_ERROR macros all use a locally scoped variable "status". If they're called with a pattern like:

      Status status = foo();
      THROW_IF_ERROR(status, ...)

       

      then the status variable inside the macro ends up being assigned to itself instead of the outer-scope variable. This makes it not throw or return, which is quite surprising.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: