be/src/exec/kudu-util.h
@@ -35,7 +35,7 @@ namespace impala {
 /// Evaluates the prepend argument only if the status is not OK.
 #define KUDU_RETURN_IF_ERROR(expr, prepend) \
   do { \
-    kudu::Status _s = (expr); \
+    const kudu::Status& _s = (expr); \
     if (UNLIKELY(!_s.ok())) {                                      \
       return Status(strings::Substitute("$0: $1", prepend, _s.ToString())); \
     } \
